--- a/style.css
+++ b/style.css
@@ -8,6 +8,12 @@ body {
     background-color: rgb(0, 0, 0);
 }
 
+p {
+    padding-top: 4px;
+    color: white;
+    font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
 header {
     text-align: center;
 }
@@ -77,6 +83,13 @@ input {
     width: 100%;
     border-radius: 5px;
     border: 0;
+}
+
+@media screen and (max-width: 500px){
+    div {
+        padding: 20px;
+        width: 100%;
+    }
 }
 
 @media screen and (max-width: 425px) {
