--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ p {
     padding-top: 4px;
     color: white;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    background-color: blue;
 }
 
 header {
