--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     background-color: rgb(0, 0, 0);
 }
 
-p {
+#randomColor {
     padding-top: 4px;
     color: white;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
