--- a/style.css
+++ b/style.css
@@ -12,6 +12,7 @@ body {
     padding-top: 4px;
     color: white;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+    text-shadow: 1px 1px 1px black;
 }
 
 header {
