--- a/style.css
+++ b/style.css
@@ -6,9 +6,11 @@
 
 body {
     background-color: rgb(0, 0, 0);
+    width: 100%;
+    height: 100%;
 }
 
-#randomColor {
+p {
     padding-top: 4px;
     color: white;
     font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -16,13 +18,13 @@ body {
 }
 
 header {
-    text-align: center;
+    display: flex;
+    justify-content: center;
 }
 
 header button {
     padding: 20px;
     border-radius: 0;
-    margin-left: -4px;
 }
 
 .red {
@@ -53,13 +55,18 @@ header button {
     background-color: cyan;
 }
 
-div {
-    margin: 0 auto;
+#container {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    height: 500px;
     text-align: center;
-    position: relative;
-    top: 220px;
-    max-width: 500px;
 }
+
+#content {
+    width: 100%;
+}
+
 
 button {
     padding: 15px;
@@ -85,6 +92,7 @@ input {
     border-radius: 5px;
     border: 0;
     outline: none;
+    max-width: 500px;
 }
 
 @media screen and (max-width: 500px){
@@ -95,12 +103,6 @@ input {
 }
 
 @media screen and (max-width: 425px) {
-    div {
-        width: 100%;
-        padding: 20px;
-        top: 120px;
-    }
-
     header button:hover {
         background-color: initial;
     }
@@ -110,9 +112,8 @@ input {
     }
 }
 
-@media screen and (max-width: 320px){
-    header button {
-        position: relative;
-        left: 5px;
+@media screen and (max-width: 320px) {
+    div button {
+        padding: 12px;
     }
 }
