--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    outline: none;
 }
 
 body {
@@ -57,16 +58,22 @@ header button {
 
 #container {
     display: flex;
+    flex-direction: column;
     align-items: center;
     justify-content: center;
     height: 500px;
+    width: 100%;
     text-align: center;
 }
 
-#content {
-    width: 100%;
+#btn {
+    display: flex;
+    flex-direction: row;
 }
 
+#btn button {
+    margin: 0 1%;
+}
 
 button {
     padding: 15px;
@@ -87,12 +94,14 @@ button:active {
 input {
     padding: 8px;
     margin-top: 10px;
-    margin-bottom: 10px;
     width: 100%;
     border-radius: 5px;
     border: 0;
-    outline: none;
     max-width: 500px;
+}
+
+#change {
+    margin-top: -5px;
 }
 
 @media screen and (max-width: 500px){
