--- a/style.css
+++ b/style.css
@@ -120,10 +120,10 @@ input {
 
 @media screen and (max-width: 375px) {
     section button {
-        padding: 12px;
+        padding: 10px;
     }
 
     input {
-        max-width: 300px;
+        max-width: 90%;
     }
 }
