--- a/style.css
+++ b/style.css
@@ -104,6 +104,12 @@ input {
     margin-top: -5px;
 }
 
+@media screen and (max-width: 500px){
+    input {
+        max-width: 90%;
+    }
+}
+
 @media screen and (max-width: 425px) {
     header button:hover {
         background-color: initial;
@@ -112,18 +118,10 @@ input {
     div button:hover {
         background-color: white;
     }
-
-    input {
-        max-width: 400px;
-    }
 }
 
 @media screen and (max-width: 375px) {
     section button {
         padding: 10px;
-    }
-
-    input {
-        max-width: 90%;
     }
 }
